[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/ui/cenariotras.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/cenariofrente.png" type="Texture" id=2]
[ext_resource path="res://scenes/prefabs/top_collision.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/prefabs/aim.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/management/level.gd" type="Script" id=5]
[ext_resource path="res://scenes/prefabs/bottom_collision.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/cao/rindo.png" type="Texture" id=7]
[ext_resource path="res://assets/cao/captura.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/hud.png" type="Texture" id=9]
[ext_resource path="res://assets/font/PressStart2P.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/sons/cao_captura.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sons/round.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sons/cao_rindo.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sons/flyaway.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sons/colidiu.wav" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dog_catches_duck:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 389, 547 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dog_smiling:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 389, 553 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "dog_smiling"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dog_smiling:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5, 2.1, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 389, 553 ), Vector2( 389, 465 ), Vector2( 389, 418 ), Vector2( 389, 457 ), Vector2( 389, 485 ), Vector2( 389, 553 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "duck_capture"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("dog_catches_duck:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.7, 2.3, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 389, 547 ), Vector2( 389, 436 ), Vector2( 389, 410 ), Vector2( 389, 460 ), Vector2( 389, 510 ), Vector2( 389, 547 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 10 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
z_index = -3
texture = ExtResource( 1 )
centered = false

[node name="foreground" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="Aim" parent="." instance=ExtResource( 4 )]
position = Vector2( 357, 377 )
z_index = 1

[node name="spawn_ducks" type="Timer" parent="."]
one_shot = true

[node name="spawn_new_ducks" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TopCollision" parent="." instance=ExtResource( 3 )]
position = Vector2( 381, -73 )

[node name="BottomCollision" parent="." instance=ExtResource( 6 )]
position = Vector2( 380, 735 )

[node name="dog_catches_duck" type="Sprite" parent="."]
position = Vector2( 389, 547 )
texture = ExtResource( 8 )

[node name="dog_smiling" type="Sprite" parent="."]
position = Vector2( 389, 553 )
texture = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/dog_smiling = SubResource( 3 )
anims/duck_capture = SubResource( 2 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="texture" type="Sprite" parent="hud"]
position = Vector2( 385, 630 )
texture = ExtResource( 9 )

[node name="score" type="Label" parent="hud"]
margin_left = 353.0
margin_top = 621.0
margin_right = 414.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 4 )
text = "0
"
align = 1
valign = 1

[node name="dog_captured_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="dog_smiling_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="dead_duck_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="duck_flyaway_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="new_match_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[connection signal="timeout" from="spawn_ducks" to="." method="_on_spawn_ducks_timeout"]
[connection signal="timeout" from="spawn_new_ducks" to="." method="_on_spawn_new_ducks_timeout"]
[connection signal="body_entered" from="TopCollision" to="." method="_on_top_collision_body_entered"]
[connection signal="body_entered" from="BottomCollision" to="." method="_on_bottom_collision_body_entered"]
